--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,11 @@
     <title>Vanilla Redux</title>
   </head>
   <body>
-    <button id="add">Add</button>
-    <span></span>
-    <button id="minus">Minus</button>
+    <h1>To Dos</h1>
+    <form>
+      <input type="text" placeholder="Write to do" autofocus />
+      <button type="submit">Add</button>
+    </form>
+    <ul></ul>
   </body>
 </html>
